# rust_git_cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
