[package]
name = "rust_git_cli"
version = "0.1.0"
authors = ["namelesslogger <johnshanie@gmail.com>", "SHS10 <hasansyed496@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13" # https://docs.rs/git2/0.12.0/git2/
